[gd_scene load_steps=13 format=3 uid="uid://bbxh87amdh48o"]

[ext_resource type="Script" path="res://scripts/levels/level8.gd" id="1_1frt3"]
[ext_resource type="Texture2D" uid="uid://bkp8ajoqra6a4" path="res://assets/balls/dim_gray.tres" id="2_qke0n"]
[ext_resource type="PackedScene" uid="uid://b4xf4bgafr24q" path="res://scenes/template_level.tscn" id="3_qxn3p"]
[ext_resource type="PackedScene" uid="uid://dy4vpfkmtq0ua" path="res://scenes/ball.tscn" id="4_kh8q1"]
[ext_resource type="Texture2D" uid="uid://dwjockln6u737" path="res://assets/sprites/devils/spritesheetpifpafbasic.png" id="5_56bqe"]
[ext_resource type="AudioStream" uid="uid://c4nv05dv2te6n" path="res://assets/sounds/jumpscare.wav" id="6_lqtd6"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ofoyf"]
frequency = 0.0977
offset = Vector3(392.86, 140.35, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ibywl"]
noise = SubResource("FastNoiseLite_ofoyf")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k5itr"]
size = Vector2(26, 243)

[sub_resource type="Animation" id="Animation_cnrp3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_eik6i"]
resource_name = "jumpscare"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.1, -0.25, 0, 0.25, 0, 40, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.866667)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.1, -0.25, 0, 0.25, 0, 40, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.866667)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.966667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_daeuh"]
_data = {
"RESET": SubResource("Animation_cnrp3"),
"jumpscare": SubResource("Animation_eik6i")
}

[node name="level8" type="Node2D"]
script = ExtResource("1_1frt3")

[node name="thefogiscoming" type="TextureRect" parent="."]
modulate = Color(0.281187, 0.281187, 0.281187, 1)
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(128, 112)
texture = ExtResource("2_qke0n")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.145098)
offset_left = -170.0
offset_top = -73.0
offset_right = 342.0
offset_bottom = 439.0
pivot_offset = Vector2(300, 200)
texture = SubResource("NoiseTexture2D_ibywl")

[node name="dodgelabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = 24.0
offset_right = 230.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "dodge!
no more hook"
horizontal_alignment = 1
vertical_alignment = 1

[node name="testLevel" parent="." instance=ExtResource("3_qxn3p")]

[node name="Ball" parent="testLevel" instance=ExtResource("4_kh8q1")]
position = Vector2(216, 120)
size = 16
colour = "white"
rings = 8
direction = false

[node name="Ball2" parent="testLevel" instance=ExtResource("4_kh8q1")]
position = Vector2(40, 120)
size = 16
colour = "white"
rings = 8

[node name="Ball3" parent="testLevel" instance=ExtResource("4_kh8q1")]
position = Vector2(104, 120)
size = 16
colour = "white"
rings = 8
direction = false

[node name="Ball4" parent="testLevel" instance=ExtResource("4_kh8q1")]
position = Vector2(152, 120)
size = 16
colour = "white"
rings = 8

[node name="StaticBody2D" type="Area2D" parent="testLevel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="testLevel/StaticBody2D"]
position = Vector2(272, 102)
shape = SubResource("RectangleShape2D_k5itr")

[node name="ColorRect" type="ColorRect" parent="testLevel/StaticBody2D/CollisionShape2D"]
offset_left = -13.0
offset_top = -121.0
offset_right = 13.0
offset_bottom = 140.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="testLevel/StaticBody2D"]
position = Vector2(-16, 102)
shape = SubResource("RectangleShape2D_k5itr")

[node name="ColorRect2" type="ColorRect" parent="testLevel/StaticBody2D/CollisionShape2D2"]
offset_left = -13.0
offset_top = -121.0
offset_right = 13.0
offset_bottom = 140.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -4.0
offset_top = 208.0
offset_right = 284.0
offset_bottom = 248.0
color = Color(0, 0, 0, 1)

[node name="Black" type="ColorRect" parent="."]
visible = false
z_index = 4096
offset_left = -21.0
offset_top = -20.0
offset_right = 284.0
offset_bottom = 254.0
color = Color(0, 0, 0, 1)

[node name="Flip" type="Timer" parent="."]
wait_time = 0.418
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
z_index = 3000
position = Vector2(128, 112)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_56bqe")
region_enabled = true
region_rect = Rect2(29, 0, 29, 38)

[node name="JumpScareNimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_daeuh")
}

[node name="AudioListener2D" type="AudioListener2D" parent="."]
position = Vector2(128, 112)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AudioListener2D"]
stream = ExtResource("6_lqtd6")
pitch_scale = 2.0

[connection signal="body_entered" from="testLevel/StaticBody2D" to="testLevel" method="_on_walls_body_entered"]
[connection signal="timeout" from="Flip" to="." method="_on_flip_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
